--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -22,7 +22,7 @@ jobs:
   # This workflow contains a single job called "build"
   trigger_rebuild_all:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-2022
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
